# detecting-groups

./: .gitignore  CMakeLists.txt  package.xml
gemma-model/: prompt.txt
include/: DetectingGroupsNode.h  GemmaModelProvider.h  InputImageHandler.h  Json.h  LlamaBackendSingleton.h  LlamaContext.h  LlamaModel.h  MixedUserPrompt.h  ModelPrompt.h  OutputDecoder.h  Prompt.h  PromptFromFileFactory.h  SystemPrompt.h  TextOutput.h  Tokenizer.h  UserPrompt.h
src/: DetectingGroupsNode.cpp  GemmaModelProvider.cpp  InputImageHandler.cpp  LlamaBackendSingleton.cpp  MixedUserPrompt.cpp  ModelPrompt.cpp  OutputDecoder.cpp  PromptFromFileFactory.cpp  SystemPrompt.cpp  TextOutput.cpp  Tokenizer.cpp  UserPrompt.cpp  main.cpp
