<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detecting-groups</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="WyattH4@cardiff.ac.uk">Harry Wyatt</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>isaac_ros_managed_nitros</depend>
  <depend>isaac_ros_nitros_image_type</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
